welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: not found: value die
	if (noDoubles && die1 == die2) return (die % 6) + 1;
                                               ^